# Clipsy

./: LICENSE  README.md  pyproject.toml
clipsy/: __init__.py  cli.py  config.py  daemon.py  gsr.py  gui.py  ipc.py  notify.py  postprocess.py
desktop/: clipsy.desktop.in
scripts/: clipsy-gui-launch  hyprland-bindings.conf  install-rofi-entry.sh
systemd/user/: clipsy.service
tests/: __init__.py  test_config.py  test_gsr.py  test_gui.py
